welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (isBirthday==true) {
    speed=speed-5
  } else speed=speed+0
  if (speed<=60) {
    return 0
  } else if (speed>=61 && speed<=80) {
    return 1
  } else return 2
}